[Feature] ToolPlugins are now categorised by utility and sorted. [Refactor] Replaced all of the uses of JOptionPane.showMessageDialog that were actually exceptions. [Feature] Added a new system to create Todos. [Feature] When showing exceptions that are recursively caused by others exceptions, ExceptionDialog now no longer shows long trace of exceptions blaming other exceptions, instead, it condeses the stacktrace of all exceptions as one. [Feature] Localized all of the information shown in